--- a/Web Development Fundamentals /index.html
+++ b/Web Development Fundamentals /index.html
@@ -2,10 +2,21 @@
 <html>
   <head>
     <title> My first Web Page</title>
+    <style>
+      img {
+        width: 100px;
+        border-radius: 50px;
+        float: left;
+        margin-right: 10px;
+      }
+      .username{
+        font-weight: bold;
+      }
+    </style>
   </head>
   <body>
    <img src="images/mosh.jpg"/>
-   <p>@moshhamedani</p>
+   <p class="username">@moshhamedani</p>
    <p>I love Html</p>
   </body>
 </html> 
