add lesson of images and video

--- a/Web Development Fundamentals /index.html
+++ b/Web Development Fundamentals /index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
-    <title> My first Web Page</title>
+    <title>My first Web Page</title>
     <style>
       img {
         width: 100px;
@@ -9,14 +9,14 @@
         float: left;
         margin-right: 10px;
       }
-      .username{
+      .username {
         font-weight: bold;
       }
     </style>
   </head>
   <body>
-   <img src="images/mosh.jpg"/>
-   <p class="username">@moshhamedani</p>
-   <p>I love Html</p>
+    <img src="images/mosh.jpg" alt="An image of mosh amedi" />
+    <p class="username">@moshhamedani</p>
+    <p>I love Html</p>
   </body>
-</html> 
+</html>
