add table and list

--- a/HTML Basics/index.html
+++ b/HTML Basics/index.html
@@ -18,6 +18,8 @@
     <a href="mailto:louison.boisselier@gmail.com">Email Me</a>
     <a href="image.html">image</a>
     <a href="videos.html">Video</a>
+    <a href="list.html">List</a>
+    <a href="table.html">Table</a>
     <h2>Html</h2>
     <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat
