add semantic, structure web page and container lesson

--- a/HTML Basics/index.html
+++ b/HTML Basics/index.html
@@ -20,6 +20,9 @@
     <a href="videos.html">Video</a>
     <a href="list.html">List</a>
     <a href="table.html">Table</a>
+    <a href="container.html">Container</a>
+    <a href="semantic.html">Semantic</a>
+    <a href="structurewebpage.html">Structure Web page</a>
     <h2>Html</h2>
     <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat
